adding promises concepts and moving the namespace to cyngn
Change-Id: I085c574b497a64edc184ac6f48bcb13d77764dbe

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-.gradle/
-.idea/
-build/
-vertx-util.iml
+.gradle
+out
+atlassian-ide-plugin.xml
+build
+*.iml
+*.ipr
+*.iws
+*.DS_Store
+/bin/
+.classpath
+.project
+.settings/
+.idea
+gradle.properties
