fix build include to not be pulled in
Change-Id: Id2fd56fda241be34231b3ac8df092f6d47ba6579

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 // Uncomment below when doing official builds
-apply from: "gradle/sona.gradle"
+//apply from: "gradle/sona.gradle"
 
 version = '0.5.2'
 group = "com.cyngn.vertx"
